<resources>
    <string name="app_name" translatable="false">Nice Keyboard</string>
    <string name="this_action_can_contain_ads">This action may contain advertising…</string>
    <string name="tap_intro">"Tap into a World of Style."</string>
    <string name="language">Language</string>
    <string name="Continue">Continue</string>
    <string name="customize_your_keyboard_with_500_themes">Customize your keyboard with \n500+ themes</string>
    <string name="creative_themes">Creative Themes</string>
    <string name="create_custom_themes_effortlessly_to_personalize_your_device_s_appearance">Create custom themes effortlessly to \npersonalize your device\'s appearance.</string>
    <string name="many_unique_fonts">Many unique fonts</string>
    <string name="design_your_photo_keyboard_with_cool_effects_fonts_and_more">Design your photo keyboard with \ncool effects, fonts and more</string>
    <string name="emoji_diverse">Emoji diverse</string>
    <string name="all_newest_cute_and_special_emojis_for_you_only_in_facemoji_keyboard">All newest cute and special emojis for \nyou only in facemoji keyboard!</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="custom">Custom</string>
    <string name="theme">Theme</string>
    <string name="apply_keyboard">Apply keyboard</string>
    <string name="my_theme">My Theme</string>
    <string name="all_theme">All Theme</string>
    <string name="Neon">Neon</string>
    <string name="Basic">Basic</string>
    <string name="Cute">Cute</string>
    <string name="Halloween">Halloween</string>
    <string name="Colors">Colors</string>
    <string name="preview">Preview</string>
    <string name="cancel">Cancel</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="permission">Permission</string>
    <string name="to_get_started_we_need_your_permission_please_allow_full_permissions_to_continue">To get started, we need your permission. \nPlease allow full permissions to continue</string>
    <string name="turn_on_keyboard">TURN ON KEYBOARD</string>
    <string name="enable_the_keyboard_to_start_typing_and_enhance_your_user_experience">Enable the keyboard to start typing and enhance your user experience.</string>
    <string name="select_keyboard">SELECT KEYBOARD</string>
    <string name="allow_permission_to_select_and_customize_your_preferred_keyboard">Allow permission to select and customize your preferred keyboard.</string>
    <string name="read_external_storage">READ EXTERNAL STORAGE</string>
    <string name="grant_permission_to_access_and_read_files_from_your_external_storage_device">Grant permission to access and read files from your external storage device.</string>
    <string name="share_image_fail">Share image failed!</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="q_w_e_r_t_y">q w e r t y</string>
    <string name="apply">Apply</string>
    <string name="well_done">Well done!</string>
    <string name="you_ve_successfully_installed_your_brand_new_keyboard_theme">You’ve successfully installed your \nbrand new keyboard theme.</string>
    <string name="explore_more">Explore More</string>
    <string name="test_me_here">Test me here.</string>
    <string name="keyboard_custom">Keyboard Custom</string>
    <string name="background">Background</string>
    <string name="Default">Default</string>
    <string name="font">Font</string>
    <string name="congratulation">Congratulation</string>
    <string name="find_your_favorite_themes_starting_now">Find your favorite themes \nstarting now!</string>
    <string name="apply_now">Apply now</string>
    <string name="step_1_select">Step 1: Select</string>
    <string name="step_2_select">Step 2: Select</string>
    <string name="step_2">Step 2</string>
    <string name="step_1_done">Step 1: Done</string>
    <string name="step_2_done">Step 2: Done</string>
    <string name="please_grant_all_permissions_to_use">Please grant all permissions to use</string>
    <string name="see_all">See All</string>
    <string name="to_get_started_we_need_your_permission">TO GET STARTED, WE NEED YOUR \nPERMISSION:</string>
    <string name="guide">GUIDE</string>
    <string name="swiftkey_keyboard">SwiftKey Keyboard</string>
    <string name="my_background">My Background</string>
    <string name="do_you_like_this_app">Do you like this app?</string>
    <string name="let_us_know_your_experience_5_stars_is_the_best_on_google_play">Let us know your experience 5 stars is the best on Google Play!</string>
    <string name="submit">Submit</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that">Thank you for taking the time to rate us. I’m really appreciate that.</string>
    <string name="got_it">Got It.</string>
    <string name="Please_feedback">Please feedback</string>
    <string name="thank_you_for_rating_us">Thank you for rating us!</string>
    <string name="keyboard_theme">English (US)</string>
    <string name="quit_app">Quit App?</string>
    <string name="are_you_sure_you_want_to_quit_this_app">Are you sure you want to quit this app?</string>
    <string name="quit">Quit</string>
    <string name="design_your_keyboard">Design your keyboard</string>
    <string name="there_is_no_internet_connection_please_check_your_internet_connection">There is no internet connection Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
</resources>