<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_border_permission"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_14sdp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_title_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/configrounded_600"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/quit_app"
            android:textColor="@color/color_333841"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tv_content_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/configrounded_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/are_you_sure_you_want_to_quit_this_app"
            android:textColor="@color/color_333841"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_rate_cancel"
                android:ellipsize="end"
                android:fontFamily="@font/configrounded_500"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/color_333841"
                android:textSize="@dimen/_12ssp" />


            <TextView
                android:id="@+id/tvQuit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_font"
                android:backgroundTint="@color/color_FA7A50"
                android:ellipsize="end"
                android:fontFamily="@font/configrounded_500"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text="@string/quit"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>