<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_border_permission"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/configrounded_700"
            android:text="@string/permission"
            android:textColor="@color/color_333841"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPerDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/configrounded_400"
            android:includeFontPadding="false"
            android:lineHeight="20sp"
            android:text="@string/to_get_started_we_need_your_permission_please_allow_full_permissions_to_continue"
            android:textColor="@color/color_333841"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTop"
            tools:targetApi="p" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cnViewPer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPerDetail">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivTurnOnKeyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_turn_off_per"
                app:layout_constraintBottom_toBottomOf="@id/lnTurnOnKeyboard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lnTurnOnKeyboard" />

            <LinearLayout
                android:id="@+id/lnTurnOnKeyboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivTurnOnKeyboard"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/configrounded_600"
                    android:includeFontPadding="false"
                    android:text="@string/turn_on_keyboard"
                    android:textColor="@color/color_333841"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/configrounded_400"
                    android:includeFontPadding="false"
                    android:text="@string/enable_the_keyboard_to_start_typing_and_enhance_your_user_experience"
                    android:textColor="#80333841"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSelectKeyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_turn_off_per"
                app:layout_constraintBottom_toBottomOf="@id/lnSelectKeyboard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lnSelectKeyboard" />

            <LinearLayout
                android:id="@+id/lnSelectKeyboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivSelectKeyboard"
                app:layout_constraintTop_toBottomOf="@id/lnTurnOnKeyboard">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/configrounded_600"
                    android:includeFontPadding="false"
                    android:text="@string/select_keyboard"
                    android:textColor="@color/color_333841"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/configrounded_400"
                    android:includeFontPadding="false"
                    android:text="@string/allow_permission_to_select_and_customize_your_preferred_keyboard"
                    android:textColor="#80333841"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivReadStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_turn_off_per"
                app:layout_constraintBottom_toBottomOf="@id/lnReadStorage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lnReadStorage" />

            <LinearLayout
                android:id="@+id/lnReadStorage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivReadStorage"
                app:layout_constraintTop_toBottomOf="@id/lnSelectKeyboard">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/configrounded_600"
                    android:includeFontPadding="false"
                    android:text="@string/read_external_storage"
                    android:textColor="@color/color_333841"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/configrounded_400"
                    android:includeFontPadding="false"
                    android:text="@string/grant_permission_to_access_and_read_files_from_your_external_storage_device"
                    android:textColor="#80333841"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <include
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnViewPer"
            android:id="@+id/rootAds"
            layout="@layout/ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/rootAds">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_preview"
                android:fontFamily="@font/configrounded_600"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textColor="@color/color_FA7A50"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContinue"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_preview"
                android:backgroundTint="@color/color_FA7A50"
                android:fontFamily="@font/configrounded_600"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>