<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F7F7FB">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHome"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:background="?android:attr/actionBarItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/configrounded_600"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/preview"
            android:textColor="@color/color_333841"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSuccess"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/ic_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cnToolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWellDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/configrounded_700"
        android:includeFontPadding="false"
        android:text="@string/well_done"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/configrounded_400"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/you_ve_successfully_installed_your_brand_new_keyboard_theme"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWellDone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvExploreMore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_button_preview"
        android:fontFamily="@font/configrounded_600"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/explore_more"
        android:textColor="@color/color_FA7A50"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTest"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_button_preview"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/configrounded_400"
        android:hint="@string/test_me_here"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/color_333841"
        android:textColorHint="#80333841"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExploreMore" />

</androidx.constraintlayout.widget.ConstraintLayout>