<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_border_permission"
    android:padding="@dimen/_15sdp">

    <RelativeLayout
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/configrounded_700"
            android:text="@string/thank_you"
            android:textColor="@color/color_333841"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_close"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/configrounded_400"
        android:text="@string/thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that"
        android:textColor="@color/color_333841"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <TextView
        android:id="@+id/tvGotIt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_border_rate_cancel"
        android:backgroundTint="@color/color_FA7A50"
        android:fontFamily="@font/configrounded_500"
        android:gravity="center"
        android:text="@string/got_it"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />
</androidx.constraintlayout.widget.ConstraintLayout>