<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_border_permission"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/configrounded_700"
                android:includeFontPadding="false"
                android:text="@string/permission"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:id="@+id/lnViewClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/tvTop">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvStep1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_step_per_select"
                    android:fontFamily="@font/configrounded_600"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/step_1_select"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvStep2"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_step_per_select"
                    android:fontFamily="@font/configrounded_600"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/step_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/configrounded_400"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/find_your_favorite_themes_starting_now"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone" />

            <include
                android:id="@+id/rootAds"
                layout="@layout/ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

            <RelativeLayout
                android:id="@+id/rlStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivStep1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_on_keyboard_step" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivStep2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_step_2_unselect" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivStep3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_step3_unselect" />
            </RelativeLayout>

            <me.zhouzhuo.zzhorizontalprogressbar.ZzHorizontalProgressBar
                android:id="@+id/pb"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="2dp"
                app:zpb_bg_color="#1AFA7A50"
                app:zpb_max="100"
                app:zpb_pb_color="@color/color_FA7A50"
                app:zpb_progress="8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvApply"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_preview"
                android:fontFamily="@font/configrounded_600"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/apply_now"
                android:textColor="@color/color_FA7A50"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>